--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "bottender dev",
+    "dev": "nodemon server.js",
     "lint": "eslint . ",
-    "start": "bottender start",
-    "test": "jest"
+    "start": "node server.js",
+    "test": "jest",
+    "botstart": "bottender start",
+    "bot": "bottender dev",
+    "set": "npx bottender messenger webhook set"
   },
   "dependencies": {
     "bottender": "1.5.1-alpha.9",
@@ -14,7 +17,9 @@
     "eslint": "7.24.0",
     "eslint-config-prettier": "8.2.0",
     "eslint-plugin-prettier": "3.4.0",
+    "express": "^4.17.1",
     "jest": "26.6.3",
+    "nodemon": "^2.0.7",
     "prettier": "2.2.1"
   }
 }
