--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bottender": "1.5.1-alpha.9",
     "dayjs": "^1.10.4",
+    "ejs": "^3.1.6",
     "eslint": "7.24.0",
     "eslint-config-prettier": "8.2.0",
     "eslint-plugin-prettier": "3.4.0",
