--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "jest": "26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "2.2.1"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "record.json"
+    ]
   }
 }
